@@ -65,7 +65,7 @@ this will also attempt to create a useable client and server configuration
 %package client
 Summary:        UPS Monitoring Software
 Group:          Hardware/UPS
-Conflicts:	apcups, %{name} < %{version}
+Conflicts:      apcups, %{name} < %{version}
 
 %description client
 These programs are part of a developing project to monitor the assortment 
@@ -146,7 +146,7 @@ capable UPS.
 Summary:        UPS Monitoring Software
 Group:          Hardware/UPS
 Requires:       hal
-Conflicts:	apcupsd, %{name}, %{name}-server
+Conflicts:      apcupsd, %{name}, %{name}-server
 
 %description hal
 These programs are part of a developing project to monitor the assortment 
@@ -202,7 +202,7 @@ CFLAGS="$RPM_OPT_FLAGS -pedantic -Wuninitialized -Wdeclaration-after-statement -
 	--with-group=%{GROUP}
 make %{?jobs:-j%jobs}
 PORT=$(sed -n 's/#define PORT //p' config.log)
-if "$PORT" = 3493 ; then
+if [ "$PORT" = "3493" ]; then
     PORT=nut
 fi
 sed s/@PORT@/$PORT/ <%{S:5} >nut.firewall
